--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,10 @@
 <div class="header-container">
     <ul>
         <li><a href="{{ '/' | relative_url }}">{{ site.title }}</a></li>
-        <li><a href="{{ '/about' | relative_url }}">About</a></li>
-        <li><a href="{{ '/resume' | relative_url }}">Resumé</a></li>
-        <li><a href="{{ '/contact' | relative_url }}">Contact</a></li>
+        <span class="nav-right">
+            <li><a href="{{ '/about' | relative_url }}">About</a></li>
+            <li><a href="/resume.pdf" target="_blank">Resumé</a></li>
+            <li><a href="{{ '/contact' | relative_url }}">Contact</a></li>    
+        </span>
     </ul>
 </div>
