making stuff pretty

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,6 +25,6 @@ layout: default
     {% endif %}
   </section>
   <div class="backwards-link">
-    <p>« <a href="{{ '/' | relative_url }}" class="hard-anchor" title="main-page">Back</a></p>
+    <p>« <a href="{{ '/' | relative_url }}" class="post-back" title="main-page">Back</a></p>
   </div>
 </article>
