--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,27 @@
+<!-- <div class="header-container">
+    <nav>
+        <div class="nav-left">
+            <ul>
+                <li><a href="{{ '/' | relative_url }}">{{ site.title }}</a></li>
+            </ul>
+        </div>
+        <div class="nav-right">
+            <ul>
+                <li><a href="{{ '/about' | relative_url }}">About</a></li>
+                <li><a href="/resume.pdf" target="_blank">Resumé</a></li>
+                <li><a href="{{ '/contact' | relative_url }}">Contact</a></li> 
+            </ul>
+        </div>    
+    </nav>
+</div> -->
+
 <div class="header-container">
-    <ul>
+    <ul class="nav-left">
         <li><a href="{{ '/' | relative_url }}">{{ site.title }}</a></li>
-        <span class="nav-right">
-            <li><a href="{{ '/about' | relative_url }}">About</a></li>
-            <li><a href="/resume.pdf" target="_blank">Resumé</a></li>
-            <li><a href="{{ '/contact' | relative_url }}">Contact</a></li>    
-        </span>
+    </ul>
+    <ul class="nav-right">
+        <li><a href="{{ '/about' | relative_url }}" style="padding-left: 20px;">About</a></li>
+        <li><a href="/resume.pdf" target="_blank" style="padding-left: 20px;">Resumé</a></li>
+        <li><a href="{{ '/contact' | relative_url }}" style="padding-left: 20px;">Contact</a></li> 
     </ul>
 </div>
