--- a/assets/styles.css
+++ b/assets/styles.css
@@ -12,6 +12,7 @@
     padding-top: 20px;
     font-size: 17px;
     display: flex;
+    justify-content: space-between;
     padding-bottom: 20px;
 }
 
@@ -22,11 +23,17 @@
 }
 
 .header-container ul li{
-    display: inline;
+    display: inline-block;
 }
 
 .header-container ul li a{
+    color: #000000;
+    display: block;
     text-decoration: none;
+}
+
+.header-container ul li a:hover{
+    color: #696969;
 }
 
 .profile-container {
@@ -65,8 +72,18 @@
 }
 
 .post-list-container .posts-list li{
-    padding-bottom: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
     list-style-type: none;
+}
+
+.post-list-container .posts-list li:hover{
+    background-color: #B9E7FA;
+}
+
+.post-list-container .posts-list li a{
+    color: #000000;
+    text-decoration: none;
 }
 
 .post-wrapper .post-content h1{
@@ -77,11 +94,34 @@
     padding-top: 20px;
 }
 
+.post-wrapper .post-content .post-tags a{
+    padding-left: 5px;
+    padding-right: 5px;
+    text-decoration: none;
+    background-color: #B9E7FA;
+    color: #000000;
+}
+
+.backwards-link a{
+    text-decoration: none;
+    color: #000000;
+}
+
+.backwards-link a:hover{
+    text-decoration: none;
+    color: #696969;
+}
+
 .footer{
     padding-top: 20px;
     font-size: 14px;
 }
 
 .footer a{
+    color: #33B8EE;
     text-decoration: none;
+}
+
+.footer a:hover{
+    color: #696969;
 }
