permalinks not working

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
     <p class="copyright">
       &copy; {{ site.copyright_year }}.
-      Made with ♡ by <a href="mailto:{{ site.author.email }}" class="hard-anchor" title="mailto">{{ site.author.name }}</a> All rights reserved.
+      Made with ♡ by <a href="{{ site.author.github }}" class="hard-anchor" target="_blank">{{ site.author.name }}</a> All rights reserved.
     </p>
 </footer>
