--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,8 +20,8 @@
         <li><a href="{{ '/' | relative_url }}">{{ site.title }}</a></li>
     </ul>
     <ul class="nav-right">
-        <li><a href="{{ '/about' | relative_url }}" style="padding-left: 20px;">About</a></li>
-        <li><a href="/resume.pdf" target="_blank" style="padding-left: 20px;">Resumé</a></li>
-        <li><a href="{{ '/contact' | relative_url }}" style="padding-left: 20px;">Contact</a></li> 
+        <li><a href="/about.html" style="padding-left: 20px;">About</a></li>
+        <li><a href="/resume.html" style="padding-left: 20px;">Resumé</a></li>
+        <li><a href="/contact.html" style="padding-left: 20px;">Contact</a></li> 
     </ul>
 </div>
