--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,27 +1,29 @@
-<!-- <div class="header-container">
-    <nav>
-        <div class="nav-left">
-            <ul>
-                <li><a href="{{ '/' | relative_url }}">{{ site.title }}</a></li>
-            </ul>
-        </div>
-        <div class="nav-right">
-            <ul>
-                <li><a href="{{ '/about' | relative_url }}">About</a></li>
-                <li><a href="/resume.pdf" target="_blank">Resumé</a></li>
-                <li><a href="{{ '/contact' | relative_url }}">Contact</a></li> 
-            </ul>
-        </div>    
-    </nav>
-</div> -->
-
-<div class="header-container">
-    <ul class="nav-left">
+<nav class="--font-size-scale-small">
+    <ul>
         <li><a href="{{ '/' | relative_url }}">{{ site.title }}</a></li>
     </ul>
-    <ul class="nav-right">
-        <li><a href="/about.html" style="padding-left: 20px;">About</a></li>
-        <li><a href="/resume.html" style="padding-left: 20px;">Resumé</a></li>
-        <li><a href="/contact.html" style="padding-left: 20px;">Contact</a></li> 
-    </ul>
-</div>
+    <div class="nav-left">
+        <ul>
+            <li><a href="#" class="toggle-button" id="toggle" onclick="changeClass()">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </a></li>
+        </ul>
+        <ul class="nav-links" id="nlinks">
+            <li><a href="/about.html" style="padding-left: 20px;">About</a></li>
+            <li><a href="/resume.html" style="padding-left: 20px;">Resumé</a></li>
+            <li><a href="/contact.html" style="padding-left: 20px;">Contact</a></li> 
+        </ul>
+    </div>
+</nav>
+
+<script>
+    function changeClass() {
+        if (document.getElementById('nlinks').className === "nav-links"){
+            document.getElementById('nlinks').className = "nav-links-responsive";
+        } else if (document.getElementById('nlinks').className === "nav-links-responsive"){
+            document.getElementById('nlinks').className = "nav-links";
+        }
+    }
+</script>
