--- a/_includes/post-list.html
+++ b/_includes/post-list.html
@@ -1,10 +1,10 @@
 <div class="post-list-container">
-    <h2>Blog posts</h2>
+    <h2 class="--font-size-scale-small">Blog posts</h2>
     <ul class="posts-list">
     {% for post in site.posts %}
         <li>
-        <span class="post-date" style="color: #696969;">{{ post.date | date_to_string }} »</span>
-        <a href="{{ post.url }}" class="caption" title="🔖 {{ post.tags | array_to_sentence_string }}">{{post.title}}</a>
+        <span class="post-date --font-size-scale-small" style="color: #696969;">{{ post.date | date_to_string }} »</span>
+        <a class="--font-size-scale-small" href="{{ post.url }}" class="caption" title="🔖 {{ post.tags | array_to_sentence_string }}">{{post.title}}</a>
         </li>
     {% endfor %}
     </ul>
