--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,11 @@
         </head>
     <body>
         <div class="container">
-            <div class="main-container">
-                {% include header.html %}
-                    {{ content }}
-                {% include footer.html %}
+            {% include header.html %}
+            <div class="content">
+                {{ content }}
             </div>
+            {% include footer.html %}
         </div>
     </body>
 </html>
